# FASTgres

./: .gitignore  bao_server_eval.py  build_query_objects.py  clear_caches.sh  config.ini  context_heuristic.py  evaluate_queries.py  featurize.py  fill_eval_dictionary.py  generate_labels.py  mkdocs.yml  pyproject.toml  query.py  requirements.txt  update_db_info.py  utility.py  vectorizer.py
docs/: about.md  documentation.md  fastgres_dir.md  index.md  user_guide.md
evaluation/stack/: query_objects_encoding_time.json
experiments/: evaluate_workload_distributed.py
fastgres/: config.ini  definitions.py
fastgres/analysis_utility/: tool.py
fastgres/async_components/: context_handler.py  node.py  query_dispatcher.py
fastgres/baseline/: database_connection.py  evaluate_workload.py  experiment.py  hint_sets.py  log_utils.py  public_api.py  utility.py
fastgres/experiments/: evaluate_workload.py
fastgres/labeling/: heuristic_labeling.py  label_queries.py
fastgres/models/: context.py  experience.py  sync_model.py  train_model.py
fastgres/query_encoding/: encoded_query.py  feature_extractor.py  query.py  query_encoder.py
fastgres/workloads/: workload.py
testing/: distributed_featurization.ipynb  distributed_model_training.ipynb  distributed_prediction.ipynb  loading_pg_extensions.ipynb  model_loading.ipynb  profiling.ipynb
testing/analysis/: dominant_hint_analysis.ipynb  hint_set_graph.ipynb  hint_set_one_ring_traversal.ipynb  hint_set_order_vis.ipynb  labeling_fastgres_ues.ipynb  (+1 more)
unittests/: api_test_stack.py  context_test_generic.py
(+2014 files in other folders)
